--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,9 @@ h2 {
 
 #left-panel {
     left: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 #right-panel {
@@ -62,6 +65,11 @@ main {
     font-size: 16px;
 }
 
+.editor-section p {
+    margin: 0 0 10px 0;
+    font-size: 16px;
+}
+
 #download {
     background-color: #28a745;
     color: white;
@@ -75,6 +83,21 @@ main {
 
 #download:hover {
     background-color: #218838;
+}
+
+#reset {
+    background-color: #a72828;
+    color: white;
+    border: none;
+    border-radius: 6px;
+    padding: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.2s ease;
+}
+
+#reset:hover {
+    background-color: #882121;
 }
 
 #toggle-camera {
@@ -96,5 +119,53 @@ main {
     display: flex;
     flex-direction: column;
     gap: 15px;
+}
+
+#disclaimer {
+    text-align: center;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 10px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 15px;
+  height: 15px;
+  background: #25be49;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 10px;
+  height: 10px;
+  background: #28a745;
+  cursor: pointer;
+}
+
+.slider-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-bottom: 10px;
+}
+
+.slider-row label {
+    white-space: nowrap;
+    font-size: 14px;
+    width: 120px;
 }
 
