--- a/style.css
+++ b/style.css
@@ -42,11 +42,18 @@ h2 {
 }
 
 #left-panel {
+    position: fixed;
+    top: 5;
+    bottom: 5;
+    width: 400px;
     left: 20px;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
+    overflow-y: auto;
+    padding: 10px;
 }
+
 
 #right-panel {
     right: 20px;
@@ -168,4 +175,30 @@ main {
     font-size: 14px;
     width: 120px;
 }
+
+#left-panel {
+    /* ...altre regole... */
+    scrollbar-width: thin; /* Firefox */
+    scrollbar-color: #28a745 #949494; /* Firefox: thumb e track */
+}
+
+/* Chrome, Edge, Safari */
+#left-panel::-webkit-scrollbar {
+    width: 8px;
+}
+
+#left-panel::-webkit-scrollbar-track {
+    background: #949494;
+}
+
+#left-panel::-webkit-scrollbar-thumb {
+    background-color: #25be49;
+    border-radius: 4px;
+    border: 2px solid #949494; /* crea effetto padding */
+}
+
+#left-panel::-webkit-scrollbar-thumb:hover {
+    background-color: #28a745;
+}
+
 
